--- a/ClientConvertisseurV2/Views/ConvertisseurEuroPage.xaml
+++ b/ClientConvertisseurV2/Views/ConvertisseurEuroPage.xaml
@@ -38,12 +38,14 @@
             DisplayMemberPath="NomDevise"
             ItemsSource="{Binding Devises, Mode=TwoWay}"
             RelativePanel.AlignHorizontalCenterWithPanel="True"
-            RelativePanel.Below="TblockDevise" />
+            RelativePanel.Below="TblockDevise"
+            SelectedItem="{Binding SelectedDevise, Mode=TwoWay}" />
 
         <Button
             x:Name="BtConvertir"
             Width="200"
             Margin="0,10,0,10"
+            Command="{Binding BtnSetConversion}"
             Content="Convertir"
             RelativePanel.AlignHorizontalCenterWithPanel="True"
             RelativePanel.Below="CbDevise" />
